<resources>

    <!--    tempText    -->
    <string name="tempText">Please Enter</string>

    <!--    navigation-->

        <!-- bottom navigation-->
    <string name="menu_home">Home</string>
    <string name="menu_myjob">MyJob</string>
    <string name="menu_search">Search</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_explore">Explore</string>
    <string name="login">Login</string>

        <!--  navigation page-->

    <string name="page_search_result">Search Result</string>
    <string name="page_job_detail">Job Detail</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>






    <!--    fragment_home-->

    <string name="app_name">JOB-ROM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="main_title_explore">직업 탐험하기</string>
    <string name="main_body_explore">수 많은 직업중 나에게 맞는\n직업을 찾아보세요</string>
    <string name="main_title_search">조건별 검색하기</string>
    <string name="main_title_news">소식 몰아보기</string>

    <string name="main_banner">배너 공간입니다</string>



    <!--    fragment_search-->

    <string name="condition_job_category">직업군 분류</string>
    <string name="condition_aptitude">적성 분류</string>
    <string name="condition_salary">연봉</string>
    <string name="condition_hire_equality">고용 평등</string>

    <string name="button_initialize">초기화</string>
    <string name="button_search">검색하기</string>


    <!--      fragment_job_detail      -->
    <string name="text_equality">고용평등</string>
    <string name="text_potential">발전가능성</string>
    <string name="text_outlook">일자리전망</string>
    <string name="text_summary">직업 개요</string>
    <string name="text_environment">업무 환경</string>
    <string name="text_required_ability">필요 능력</string>
    <string name="text_preparation">준비 과정</string>


    <!--    fragment_myjob-->
    <string name="myjob_jobs_list">관심직업</string>
    <string name="myjob_friends_list">친구</string>
    <string name="myjob_news_list">관심뉴스</string>


    <!--     login_test    -->

    <string name="login_title">Please Login</string>
    <string name="button_start">앱 이용하기</string>





    <!--    임시 string -->

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic OAuth</string>
    <string name="desc_generic_idp">Use a generic OAuth identity provider, like Apple, Microsoft, Yahoo, or Twitter to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">OAuth Sign In</string>
    <string name="generic_signin_fmt">Sign In with %s</string>
    <string name="generic_status_fmt">User: %s (%s)</string>
    <string name="generic_label_provider">Provider:</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>


</resources>
