<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SearchView
        android:id="@+id/floating_search_view"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/box_round_bin"
        android:elevation="6dp"
        app:closeIcon="@drawable/ic_cancel_24"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:queryHint="@string/tempText" />


    <LinearLayout
        android:id="@+id/fragment_search_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/box_rectangle_bin"
        android:elevation="6dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/floating_search_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/condition_job_category"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt_condition_job_category"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="24dp"
                android:background="@drawable/img_button_unchecked" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#E5E5E5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/condition_aptitude"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt_condition_aptitude"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="24dp"
                android:background="@drawable/img_button_unchecked" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#E5E5E5" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/condition_salary"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt_condition_salary"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="24dp"
                android:background="@drawable/img_button_unchecked" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#E5E5E5" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/condition_hire_equality"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt_condition_hire_equality"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="24dp"
                android:background="@drawable/img_button_unchecked" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#E5E5E5" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="72dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/box_round_bin"
        android:elevation="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_search_body">

        <Button
            android:id="@+id/bt_initialize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/box_round_left_bin"
            android:text="@string/button_initialize"
            android:textAlignment="center"
            android:textSize="16sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#E5E5E5" />


        <Button
            android:id="@+id/bt_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/box_round_right_bin"
            android:text="@string/button_search"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>