<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--            title 부분-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tempText"
                    android:textSize="32sp"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/tv_division"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tempText"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/tv_salary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tempText"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"/>


                <!--                equality 부분-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/box_round_blue_bin"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="2dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/text_equality"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="2dp"
                            android:background="#E5E5E5" />

                        <TextView
                            android:id="@+id/tv_equality"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="2dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/tempText"
                            android:textColor="@android:color/white"
                            android:textSize="12sp" />

                    </LinearLayout>


                    <!--                    potential 부분-->

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/box_round_blue_bin"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="2dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/text_potential"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="2dp"
                            android:background="#E5E5E5" />

                        <TextView
                            android:id="@+id/tv_potential"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="2dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/tempText"
                            android:textColor="@android:color/white"
                            android:textSize="12sp" />

                    </LinearLayout>


                    <!--                    outlook 부분-->

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/box_round_blue_bin"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="2dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/text_outlook"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="2dp"
                            android:background="#E5E5E5" />

                        <TextView
                            android:id="@+id/tv_outlook"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="2dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/tempText"
                            android:textColor="@android:color/white"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <!--            여기 까지가 title 부분-->
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#E5E5E5" />
            <!--                절취선             -->


            <!--            직무 개요 summary 부분-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_summary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="안녕하세요 씨부레안녕하세요 씨부레 안녕하세요 씨부레 안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레"
                    android:textSize="12sp" />

            </LinearLayout>
<!--summary 여기 까지-->

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#E5E5E5" />

            <!--            업무환경 environment 부분-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_environment"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_environment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="안녕하세요 씨부레안녕하세요 씨부레 안녕하세요 씨부레 안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레"
                    android:textSize="12sp" />

            </LinearLayout>
<!--작업환경 environment 부분 끝-->

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#E5E5E5" />

<!--            필요능력 requiredAbility 부분-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_required_ability"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_requred_ability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="안녕하세요 씨부레안녕하세요 씨부레 안녕하세요 씨부레 안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레"
                    android:textSize="12sp" />

            </LinearLayout>
<!--필요능력 부분 끝-->

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#E5E5E5" />


            <!--      preparation 준비과정 부분      -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_preparation"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_preparation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="안녕하세요 씨부레안녕하세요 씨부레 안녕하세요 씨부레 안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레안녕하세요 씨부레"
                    android:textSize="12sp" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>